[package]
name = "corealloc"
version = "0.6.0"
authors = ["Gerd Zellweger <mail@gerdzellweger.com>", "Ankit Bhardwaj <ankit-iitb@users.noreply.github.com>"]
edition = "2018"

description = "Helper CLI utility decide on core allocation on the current system"
license = "MIT OR Apache-2.0"
readme = "README.md"

[dependencies]
hwloc2 = "2.2"
clap = { version = "2", features = ["yaml"] }
log = "0.4"
env_logger = "0.7"
serde = { version = "1.0.136", features = ["derive"] }
